// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"minify" option should emit error: errors 1`] = `
[
  "Error: simple.html from Html Minimizer plugin
object error",
  "Error: simple.html from Html Minimizer plugin
string error",
  "Error: simple.html from Html Minimizer plugin
test error",
]
`;

exports[`"minify" option should emit error: warnings 1`] = `[]`;

exports[`"minify" option should minimize code and emit warning: assets 1`] = `
{
  "simple.html": "<!doctype html> <html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1"> <meta http-equiv="X-UA-Compatible" content="ie=edge"> <title>Document</title> </head> <body> <h1>My First Heading</h1> <p>My first paragraph.</p> <h2>An Unordered HTML List</h2> <ul> <li>Coffee</li> <li>Tea</li> <li>Milk</li> </ul> <h2>An Ordered HTML List</h2> <ol> <li>Coffee</li> <li>Tea</li> <li>Milk</li> </ol> </body> </html> ",
}
`;

exports[`"minify" option should minimize code and emit warning: errors 1`] = `[]`;

exports[`"minify" option should minimize code and emit warning: warnings 1`] = `
[
  "Warning: object warning",
  "Warning: string warning",
  "Warning: test warning",
]
`;

exports[`"minify" option should work if minify function return object: assets 1`] = `
{
  "simple.html": "simple.html - <!doctype html> <html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1"> <meta http-equiv="X-UA-Compatible" content="ie=edge"> <title>Document</title> </head> <body> <h1>My First Heading</h1> <p>My first paragraph.</p> <h2>An Unordered HTML List</h2> <ul> <li>Coffee</li> <li>Tea</li> <li>Milk</li> </ul> <h2>An Ordered HTML List</h2> <ol> <li>Coffee</li> <li>Tea</li> <li>Milk</li> </ol> </body> </html> :<div>Second function: text from option</div>",
}
`;

exports[`"minify" option should work if minify function return object: errors 1`] = `[]`;

exports[`"minify" option should work if minify function return object: warnings 1`] = `[]`;

exports[`"minify" option should work if minify is array && minimizerOptions is array: assets 1`] = `
{
  "simple.html": "simple.html - <!doctype html> <html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1"> <meta http-equiv="X-UA-Compatible" content="ie=edge"> <title>Document</title> </head> <body> <h1>My First Heading</h1> <p>My first paragraph.</p> <h2>An Unordered HTML List</h2> <ul> <li>Coffee</li> <li>Tea</li> <li>Milk</li> </ul> <h2>An Ordered HTML List</h2> <ol> <li>Coffee</li> <li>Tea</li> <li>Milk</li> </ol> </body> </html> :<div>Second function: text from option</div>",
}
`;

exports[`"minify" option should work if minify is array && minimizerOptions is array: errors 1`] = `[]`;

exports[`"minify" option should work if minify is array && minimizerOptions is array: warnings 1`] = `[]`;

exports[`"minify" option should work if minify is array && minimizerOptions is object: assets 1`] = `
{
  "simple.html": "simple.html - <!doctype html> <html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1"> <meta http-equiv="X-UA-Compatible" content="ie=edge"> <title>Document</title> </head> <body> <h1>My First Heading</h1> <p>My first paragraph.</p> <h2>An Unordered HTML List</h2> <ul> <li>Coffee</li> <li>Tea</li> <li>Milk</li> </ul> <h2>An Ordered HTML List</h2> <ol> <li>Coffee</li> <li>Tea</li> <li>Milk</li> </ol> </body> </html> <div>Second function: true</div><div>Third function: true</div>",
}
`;

exports[`"minify" option should work if minify is array && minimizerOptions is object: errors 1`] = `[]`;

exports[`"minify" option should work if minify is array && minimizerOptions is object: warnings 1`] = `[]`;

exports[`"minify" option should work minify function: assets 1`] = `
{
  "simple.html": "<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>Document</title></head><body><h1>My First Heading</h1><p>My first paragraph.</p><h2>An Unordered HTML List</h2><ul><li>Coffee</li><li>Tea</li><li>Milk</li></ul><h2>An Ordered HTML List</h2><ol><li>Coffee</li><li>Tea</li><li>Milk</li></ol></body></html>",
}
`;

exports[`"minify" option should work minify function: errors 1`] = `[]`;

exports[`"minify" option should work minify function: warnings 1`] = `[]`;

exports[`"minify" option should work with '@minify-html/node' and broken syntax: assets 1`] = `
{
  "broken-html-syntax.html": "Text < img src="image.png" > Text <<img src=image.png> Text ><img src=image.png><a foo><bar><![CDATA[]]]><?foo?><!bar><boo>boohay <<<<>foo ",
}
`;

exports[`"minify" option should work with '@minify-html/node' and broken syntax: errors 1`] = `[]`;

exports[`"minify" option should work with '@minify-html/node' and broken syntax: warnings 1`] = `[]`;

exports[`"minify" option should work with '@minify-html/node' and options: assets 1`] = `
{
  "simple.html": "<!doctype html><html lang=en><meta charset=UTF-8><meta content=width=device-width,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0 name=viewport><meta content=ie=edge http-equiv=X-UA-Compatible><title>Document</title><body><h1>My First Heading</h1><p>My first paragraph.<h2>An Unordered HTML List</h2><ul><li>Coffee<li>Tea<li>Milk</ul><h2>An Ordered HTML List</h2><ol><li>Coffee<li>Tea<li>Milk</ol>",
}
`;

exports[`"minify" option should work with '@minify-html/node' and options: errors 1`] = `[]`;

exports[`"minify" option should work with '@minify-html/node' and options: warnings 1`] = `[]`;

exports[`"minify" option should work with '@minify-html/node': assets 1`] = `
{
  "simple.html": "<!doctypehtml><html lang=en><meta charset=UTF-8><meta content=width=device-width,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0 name=viewport><meta content=ie=edge http-equiv=X-UA-Compatible><title>Document</title><body><h1>My First Heading</h1><p>My first paragraph.<h2>An Unordered HTML List</h2><ul><li>Coffee<li>Tea<li>Milk</ul><h2>An Ordered HTML List</h2><ol><li>Coffee<li>Tea<li>Milk</ol>",
}
`;

exports[`"minify" option should work with '@minify-html/node': errors 1`] = `[]`;

exports[`"minify" option should work with '@minify-html/node': warnings 1`] = `[]`;

exports[`"minify" option should work with 'swcMinify' and options: assets 1`] = `
{
  "simple.html": "<!doctype html><html lang=en><meta charset=UTF-8><meta name=viewport content="width=device-width,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0"><meta http-equiv=X-UA-Compatible content="ie=edge"><title>Document</title><h1>My First Heading</h1> <p>My first paragraph.</p> <h2>An Unordered HTML List</h2> <ul> <li>Coffee</li> <li>Tea</li> <li>Milk</li> </ul> <h2>An Ordered HTML List</h2> <ol> <li>Coffee</li> <li>Tea</li> <li>Milk</li> </ol>",
}
`;

exports[`"minify" option should work with 'swcMinify' and options: errors 1`] = `[]`;

exports[`"minify" option should work with 'swcMinify' and options: warnings 1`] = `[]`;

exports[`"minify" option should work with 'swcMinify' and throw errors: assets 1`] = `
{
  "broken-html-syntax.html": "Text &lt; img src="image.png" >
Text &lt;<img src=image.png>
Text ><img src=image.png>

<a foo><bar></bar></a><boo>boohay
&lt;&lt;&lt;&lt;>foo
>>&lt;</boo>",
}
`;

exports[`"minify" option should work with 'swcMinify' and throw errors: errors 1`] = `
[
  "Error: broken-html-syntax.html from Html Minimizer plugin
Abrupt closing of empty comment",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Cdata in html content",
  "Error: broken-html-syntax.html from Html Minimizer plugin
End of file seen and there were open elements",
  "Error: broken-html-syntax.html from Html Minimizer plugin
End tag "a" violates nesting rules",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Eof in tag",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Incorrectly opened comment",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Invalid first character of tag name",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Invalid first character of tag name",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Invalid first character of tag name",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Invalid first character of tag name",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Invalid first character of tag name",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Invalid first character of tag name",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Invalid first character of tag name",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Non void html element start tag with trailing solidus",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Non-space characters found without seeing a doctype first, expected "<!DOCTYPE html>"",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Unexpected question mark instead of tag name",
]
`;

exports[`"minify" option should work with 'swcMinify' and throw errors: warnings 1`] = `[]`;

exports[`"minify" option should work with 'swcMinify': assets 1`] = `
{
  "simple.html": "<!doctype html><html lang=en><meta charset=UTF-8><meta name=viewport content="width=device-width,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0"><meta http-equiv=X-UA-Compatible content="ie=edge"><title>Document</title><h1>My First Heading</h1>
<p>My first paragraph.</p>
<h2>An Unordered HTML List</h2>

<ul>
  <li>Coffee</li>
  <li>Tea</li>
  <li>Milk</li>
</ul>

<h2>An Ordered HTML List</h2>

<ol>
  <li>Coffee</li>
  <li>Tea</li>
  <li>Milk</li>
</ol>",
}
`;

exports[`"minify" option should work with 'swcMinify': errors 1`] = `[]`;

exports[`"minify" option should work with 'swcMinify': warnings 1`] = `[]`;

exports[`"minify" option should work with 'swcMinifyFragment' and options: assets 1`] = `
{
  "template.html": "<div> <ul class="bar baz foo"> <li>test</li> <li>test</li> <li>test</li> </ul> </div> <span>test</span> ",
}
`;

exports[`"minify" option should work with 'swcMinifyFragment' and options: errors 1`] = `[]`;

exports[`"minify" option should work with 'swcMinifyFragment' and options: warnings 1`] = `[]`;

exports[`"minify" option should work with 'swcMinifyFragment' and throw errors: assets 1`] = `
{
  "broken-html-syntax.html": "Text &lt; img src="image.png" >
Text &lt;<img src=image.png>
Text ><img src=image.png>

<a foo><bar></bar></a><boo>boohay
&lt;&lt;&lt;&lt;>foo
>>&lt;</boo>",
}
`;

exports[`"minify" option should work with 'swcMinifyFragment' and throw errors: errors 1`] = `
[
  "Error: broken-html-syntax.html from Html Minimizer plugin
Abrupt closing of empty comment",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Cdata in html content",
  "Error: broken-html-syntax.html from Html Minimizer plugin
End tag "a" violates nesting rules",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Eof in tag",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Incorrectly opened comment",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Invalid first character of tag name",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Invalid first character of tag name",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Invalid first character of tag name",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Invalid first character of tag name",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Invalid first character of tag name",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Invalid first character of tag name",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Invalid first character of tag name",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Non void html element start tag with trailing solidus",
  "Error: broken-html-syntax.html from Html Minimizer plugin
Unexpected question mark instead of tag name",
]
`;

exports[`"minify" option should work with 'swcMinifyFragment' and throw errors: warnings 1`] = `[]`;

exports[`"minify" option should work with 'swcMinifyFragment': assets 1`] = `
{
  "template.html": "<div>
  <ul class="bar baz foo">
    <li>test</li>
    <li>test</li>
    <li>test</li>
  </ul>
</div>
<span>test</span>
",
}
`;

exports[`"minify" option should work with 'swcMinifyFragment': errors 1`] = `[]`;

exports[`"minify" option should work with 'swcMinifyFragment': warnings 1`] = `[]`;
